<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Morbus</string>
    <string name="btn_criar_sala">Criar sala</string>
    <string name="btn_acessar_sala">Acessar sala</string>

    <string name="btn_criar">Criar</string>
    <string name="btn_acessar">Acessar</string>
    <string name="btn_continuar">Continuar</string>
    <string name="btn_comecar">Começar</string>

    <string name="btn_enviar_dica">Enviar dica</string>
    <string name="btn_adivinhar">Tentar adivinhar!</string>

    <string name="txt_modo_interativo">Modo Interativo</string>

    <string name="txt_criar_sala">Criar sala</string>
    <string name="txt_acessar_sala">Acessar sala</string>

    <string name="txt_usuario">Usuário:</string>
    <string name="txt_nome_da_sala">Nome da sala:</string>
    <string name="txt_senha">Senha:</string>

    <string name="txt_escolha_doenca">Escolha uma doença:</string>
    <string name="txt_resposta">Sua resposta:</string>

    <string name="txt_sintomas">Sintomas disponíveis</string>
    <string name="txt_prevencoes">Prevenções disponíveis</string>
    <string name="txt_tranmissoes">Transmissões disponíveis</string>


    <string name="txt_diqueiro">Diqueiro</string>
    <string name="txt_adivinhador">Adivinhador</string>
    <string name="txt_jogadores">Jogadores</string>

    <string name="txt_configuracao">Configurações</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Bem-vindo(a) ao Morbus!</string>
    <string name="welcomeText">Prepare-se para aprender sobre as principais doenças causadas por micro-organismos, enquanto se diverte com seus colegas. Temos dois modos: o Estudo e o Interativo. Avance para saber mais.</string>
    <string name="estudo">Modo Estudo</string>
    <string name="estudoText">Neste modo você tem acesso a informações importantes sobre as doenças, de forma interativa e simplificada. Fundamental para um bom desempenho no Modo Interativo.</string>
    <string name="interativo">Modo Interativo</string>
    <string name="interativoText">Aqui você praticará os conhecimentos adquiridos no Modo Estudo ao interagir com amigos e colegas em um jogo de adivinhação de doenças. Por enquanto, ele ainda não está disponível para ser jogado sozinho.</string>
    <string name="config">Mais</string>
    <string name="configText">Aqui você encontrará todas as informações sobre o aplicativo, incluindo mais detalhes sobre o funcionamento do jogo, mudar o tema do APP, além de poder rever essa introdução quando quiser. Vamos lá!</string>
    <string name="voltar">Voltar</string>
    <string name="design">Dissecadores do Conhecimento</string>
    <string name="tutorial">Tutorial</string>
    <string name="regrasPont">Funcionamento</string>
    <string name="regrasText2" tools:ignore="Typos">O jogador a dar dicas tem 10 (dez) segundos para escolher sua dica inicial, ou passará a vez a outro jogador. Os demais, então, terão 1 (um) minuto para adivinhar a doença, enquanto poderão ser dadas mais dicas a critério do jogador da vez.\n\nAo acertar a doença, tanto os a\u00addi\u00advi\u00adnha\u00addo\u00adres que fizeram o acerto quanto o jogador que está dando as dicas ganham pontos. Cada adivinhador ganha uma quantidade de pontos diferente de acordo com o valor da rodada no momento do seu acerto. A rodada começa valendo 10 (dez) pontos, mas tem seu valor alterado com os seguintes acontecimentos:\n\n\u2022 A cada nova dica dada pelo jogador da vez, a rodada passa a valer menos 1 (um) ponto para todos os a\u00addi\u00advi\u00adnha\u00addo\u00adres.\n\u2022 Quando um adivinhador acerta a doença, a rodada também passa a valer menos 1 (um) ponto para os a\u00addi\u00advi\u00adnha\u00addo\u00adres que ainda não a acertaram.\n\u2022 Quando um adivinhador faz uma tentativa errada, a rodada passa a valer ainda menos 1 (um) ponto somente para aquele adivinhador em questão.\n\nO jogador a dar dicas ganha a mesma quantidade de pontos do primeiro adivinhador e mais 2 (dois) pontos por cada acerto seguinte dos demais a\u00addi\u00advi\u00adnha\u00addo\u00adres.</string>
    <string name="regrasText">Ao entrar no Modo Interativo você tem duas opções: Criar uma sala para uma partida nova, com um nome e senha que deverá ser informado aos seus colegas para que eles a acessem, ou acessar uma sala existente com as informações passadas pelo seu criador.\n\nDurante o jogo, em cada rodada, os a\u00addi\u00advi\u00adnha\u00addo\u00adres terão 1 (um) minuto para adivinhar a doença, enquanto poderão ser dadas mais dicas a critério do diqueiro.\n\nAo acertar a doença, tanto os a\u00addi\u00advi\u00adnha\u00addo\u00adresadivinhadores que fizeram o acerto quanto o diqueiro ganham pontos. Cada adivinhador ganha uma quantidade de pontos diferente, sendo esse valor de 10 (dez) dividido pela ordem de acerto do adivinhador (1 (um) se for o primeiro a adivinhar a doença, 2 (dois) se for o segundo e assim por diante). \n\nO diqueiro ganha 75% dos pontos adquiridos por cada adivinhador.</string>
    <string name="chooseFragmentTitle">Escolha uma classe de agente infectante:</string>
    <string name="bacteria">Bactérias</string>
    <string name="platelminto">Platelmintos e Nematelmintos</string>
    <string name="protozoario">Pro\u00adto\u00adzo\u00adá\u00adrios</string>
    <string name="virus">Vírus</string>
    <string name="labelLupa">Vários micro-organismos sendo vistos em uma lupa</string>
    <string name="escolhaDoenca">Escolha uma doença:</string>
    <string name="agente">Agente</string>
    <string name="sintomas">Sintomas</string>
    <string name="prevencao">Prevenção</string>
    <string name="reverInt">Rever introdução</string>
    <string name="nomeSala">Inserir nome da sala</string>
    <string name="senha">Inserir senha</string>
    <string name="nomeUser">Inserir o nome do usuário</string>
    <string name="ranking">Ranking</string>
    <string name="dicas">Dicas do Diqueiro</string>
    <string name="labelGear">Ilustração de um ponto de interrogação</string>
    <string name="labelBooks">Ilustração de um livro e, acima, um cérebro</string>
    <string name="labelGame">Ilustração de um controle de videogame</string>
    <string name="labelFriendship">Ilustração de uma pessoa com o braço por trás de outra</string>
    <string name="labelVirus">Ilustração de um vírus</string>
    <string name="labelWinner">Ilustração de uma taça de campeonato</string>
    <string name="labelBacteria">Ilustração de uma bactéria</string>
    <string name="labelPlatelminto">Ilustração de dois nematelmintos</string>
    <string name="labelProtozoario">Ilustração de um protozoário</string>
    <string name="creditos">Créditos</string>
    <string name="creditsLogo">Ícone feito por \n<a href="https://www.flaticon.com/authors/freepik">Freepik</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creditsFriendship">Ícone feito por \n<a href="https://www.flaticon.com/authors/freepik">Freepik</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creditsBooks">Ícone feito por \n<a href="https://www.flaticon.com/authors/smashicons">Smashicons</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creditsGame">Ícone feito por \n<a href="https://www.flaticon.com/authors/mynamepong">mynamepong</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creditsGear">Ícone feito por \n<a href="https://www.flaticon.com/br/autores/pixel-perfect">Pixel perfect</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creditsBacteria">Ícone feito por \n<a href="https://creativemarket.com/eucalyp">Eucalyp</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creditsPlatelminto">Ícone feito por \n<a href="https://www.flaticon.com/authors/freepik">Freepik</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creditsProtozoario">Ícone feito por \n<a href="https://www.flaticon.com/authors/freepik">Freepik</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creditsVirus">Ícone feito por \n<a href="https://www.flaticon.com/authors/pixelmeetup">Pixelmeetup</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creditsWinner">Ícone feito por \n<a href="https://www.flaticon.com/authors/freepik">Freepik</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creditsSad">Ícone feito por \n<a href="https://www.flaticon.com/authors/smashicons">Smashicons</a> de \n<a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="labelSetaDir">Seta para a direita</string>
    <string name="labelCheck">Sinal de check</string>
    <string name="sair">Sair</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">OK</string>
    <string name="aguardando_comecar">Aguardando o primeiro jogador a entrar na sala começar a partida</string>
    <string name="aguardando_comecar_title">Partida cancelada</string>
    <string name="aguardando_comecar_message">O jogador com o poder de iniciar a partida saiu do jogo e, infelizmente, você não poderá continuar.\nTente acessar a sala novamente para ser seu gestor ou então crie sua própria sala.</string>
    <string name="aguardando_jogadores_title">Olá, você é o primeiro a entrar nesta sala!</string>
    <string name="aguardando_jogadores_message">Verifique em tempo real os jogadores que estão aguardando o inicio da partida e aperte no botão começar quando ver que todos os seus colegas já entraram, lembre-se que você precisa de pelo menos mais uma pessoa para iniciar a partida.\nAqui você também encontra os dados de acesso da sala, para caso se esqueça.</string>
    <string name="txt_dados">Dados da sala</string>
    <string name="txt_nomeSala">Nome:</string>
    <string name="txt_senhaSala">Senha:</string>
    <string name="sairApp">Você deseja sair do app?</string>
    <string name="sairJogo">Você deseja sair do jogo?</string>
    <string name="sairJogoPont">Ao sair da sala você perderá toda a sua pontuação.</string>
    <string name="txt_expulso">Todos os seus colegas saíram do jogo e, infelizmente, você não poderá continuar sozinho.\nChame mais um amigo e volte para se divertir.</string>
    <string name="transmissao">Transmissão</string>
    <string name="labelSetaEsq">Seta para a esquerda</string>
    <string name="umdequatro">1/4</string>
    <string name="doisdequatro">2/4</string>
    <string name="tresdequatro">3/4</string>
    <string name="quatrodequatro">4/4</string>
    <string name="voceJaAcertou">Você já acertou, aguardar final da rodada</string>
    <string name="sorteandoDoenca">Sorteando uma doença...</string>
    <string name="jogoFim">Jogo finalizado! O(A) vencedor(a) foi</string>
    <string name="labelSad">Ilustração de um fantasma triste</string>
    <string name="morbus">Morbus</string>
    <string name="interativo_title">Primeira vez aqui?</string>
    <string name="interativo_msg">Nesta tela você tem duas opções: Criar uma sala para uma partida nova, com um nome e senha que deverá ser informado aos seus colegas para que eles a acessem, ou acessar uma sala existente com as informações passadas pelo seu criador.</string>
    <string name="dicas_disponiveis">Dicas disponíveis:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mudarTema">Aperte para ativar ou desativar o tema escuro:</string>
    <string name="escuro">Escuro</string>
    <string name="escolherTema">Trocar tema</string>
</resources>