<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".tutoriaisRegras.TutorialActivity3">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp">
    <TextView
        android:id="@+id/fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/interativo"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_title2"
        android:layout_below="@id/fragment_title"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/labelGame"
        app:srcCompat="@drawable/game" />

    <TextView
        android:id="@+id/fragment_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_layout"
        android:layout_marginTop="20dp"
        android:justificationMode="inter_word"
        android:text="@string/interativoText"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:background="@null"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/labelSetaEsq"
            android:src="@drawable/ic_arrow_right"
            android:scaleX="-1"/>

        <TextView
            android:id="@+id/indicator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_next"
            android:layout_centerInParent="true"
            android:text="@string/tresdequatro"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:contentDescription="@string/labelSetaDir" />
    </RelativeLayout>

</RelativeLayout>
</RelativeLayout>