<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/roomAcessFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/acessModoInterativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/interativo"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/acessTxtAcessarSala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acessModoInterativo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_acessar_sala"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/acessBtnContinuar"
        android:layout_below="@+id/acessTxtAcessarSala"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/acessTxtNomeSala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nome_da_sala"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/acessEditNomeSala"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/acessTxtNomeSala"
                android:layout_marginBottom="20dp"
                android:autofillHints="@string/nomeSala"
                android:hint="@string/nomeSala"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/acessTxtSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_senha"
                android:layout_below="@+id/acessEditNomeSala"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/acessEditSenha"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/acessTxtSenha"
                android:autofillHints="@string/senha"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/acessBtnContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundbutton"
        android:ems="4"
        android:text="@string/btn_continuar" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgLupa"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:visibility="visible" />

</RelativeLayout>