<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".tutoriaisRegras.TutorialActivity2">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_above="@id/button_layout"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/estudo"
            android:gravity="center"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/fragment_title2"
            android:layout_below="@id/fragment_title"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:contentDescription="@string/labelBooks"
            app:srcCompat="@drawable/books" />

        <TextView
            android:id="@+id/fragment_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:justificationMode="inter_word"
            android:text="@string/estudoText"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/colorMenu"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <ImageButton
                android:id="@+id/btn_back"
                android:padding="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:src="@drawable/ic_arrow_right"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:scaleX="-1"
                android:contentDescription="@string/labelSetaEsq" />

            <TextView
                android:id="@+id/indicator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btn_next"
                android:layout_centerInParent="true"
                android:padding="15sp"
                android:text="@string/doisdequatro"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btn_next"
                android:padding="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:src="@drawable/ic_arrow_right"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:contentDescription="@string/labelSetaDir" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>