<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageLogo">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbutton"
                android:ems="9"
                android:text="@string/reverInt"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnRegras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundbutton"
                android:ems="9"
                android:text="@string/regrasPont"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnCreditos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundbutton"
                android:ems="9"
                android:text="@string/creditos"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/labelLupa"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:visibility="visible"
        android:scaleX="-1" />


</RelativeLayout>