<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="20dp"
    tools:context=".modoInterativo.AguardandoJogadoresFragment">

    <TextView
        android:id="@+id/aguardandoJogadoresTxtJogadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_jogadores"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorText"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/aguardandoJogadoresTxtJogadores"
        android:layout_above="@+id/btnAguardandoJogadores">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRanking"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginBottom="30dp"
            tools:listitem="@layout/recycler_view_ranking"/>

        <TextView
            android:id="@+id/aguardandoJogadoresTxtDados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:text="@string/txt_dados" />

        <TextView
            android:id="@+id/aguardandoJogadoresTxtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/txt_nomeSala" />

        <TextView
            android:id="@+id/aguardandoJogadoresTxtSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_senhaSala" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAguardandoJogadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_comecar" />

    <ProgressBar
        android:id="@+id/aguardandoJogadoresProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnAguardandoJogadores"
        android:layout_alignTop="@+id/btnAguardandoJogadores"
        android:layout_alignStart="@+id/btnAguardandoJogadores"
        android:layout_alignEnd="@+id/btnAguardandoJogadores"/>
</RelativeLayout>
