<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/roomAcessNameFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <RelativeLayout
        android:id="@+id/menuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorMenu">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="@string/interativo"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/labelBooks"
            android:src="@drawable/books"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menuLayout">

    <TextView
        android:id="@+id/acessTxtAcessarSala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_acessar_sala"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@+id/acessnameBtnAcessarSala"
        android:layout_below="@+id/acessTxtAcessarSala">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/acessnameTxtUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_usuario"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/acessnameEditUsuario"
                style="@style/MyEditTextstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/acessnameTxtUsuario"
                android:autofillHints="@string/nomeUser"
                android:hint="@string/nomeUser"
                android:inputType="textPersonName"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/acessnameBtnAcessarSala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:layout_alignParentEnd="true"
        android:ems="4"
        android:text="@string/btn_acessar"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp" />

    <ProgressBar
        android:id="@+id/acessNameProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/acessnameBtnAcessarSala"
        android:layout_alignStart="@+id/acessnameBtnAcessarSala"
        android:layout_alignBottom="@+id/acessnameBtnAcessarSala"
        android:layout_alignTop="@+id/acessnameBtnAcessarSala"  />

</RelativeLayout>
</RelativeLayout>